No guava even in unit tests